k8s/manifests/uptime-kuma/statefulset.yml
---

# Let's define here our statefulset
# that will handle persistant storage and correct pods creation
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma

# Let's define here our specs
spec:
  replicas: 1
  serviceName: uptime-kuma-service
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.23.1
          ports:
            - name: uptime-kuma
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data

  # Let's put here the claim for our persistent storage
  volumeClaimTemplates:
    - metadata:
        name: uptime-kuma-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
